RESOLVED FIXED61882
[CG] GraphicsContext::fillRoundedRect() ignores the gradient fill the CGContextFillEllipseInRect() code path
https://bugs.webkit.org/show_bug.cgi?id=61882
Summary [CG] GraphicsContext::fillRoundedRect() ignores the gradient fill the CGConte...
Simon Fraser (smfr)
Reported 2011-06-01 13:39:25 PDT
The CGContextFillEllipseInRect() fast path in GraphicsContext::fillRoundedRect() doesn't go through GraphicsContext::fillPath(), so ignores the gradient fill style. I don't think this code path can be hit via canvas or CG, but we should fix it anyway. Regressed in bug 58098.
Attachments
proposed patch (1.87 KB, patch)
2011-06-01 14:00 PDT, Ian Henderson
no flags
Ian Henderson
Comment 1 2011-06-01 14:00:58 PDT
Created attachment 95657 [details] proposed patch
WebKit Commit Bot
Comment 2 2011-06-02 03:04:46 PDT
Comment on attachment 95657 [details] proposed patch Clearing flags on attachment: 95657 Committed r87887: <http://trac.webkit.org/changeset/87887>
WebKit Commit Bot
Comment 3 2011-06-02 03:04:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.