2011-06-02  Ian Henderson  <ianh@apple.com>

Reviewed by Simon Fraser.

        [CG] GraphicsContext::fillRoundedRect() ignores the gradient fill the CGContextFillEllipseInRect() code path
        https://bugs.webkit.org/show_bug.cgi?id=61882

        If we have a gradient or pattern fill set, take the slow path, which
        handles these cases properly.

        No new tests, since we never try to fill a rounded rect with a
        gradient or pattern.

        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::fillRoundedRect):

Canonical link: https://commits.webkit.org/77363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87887 268f45cc-cd09-0410-ab3c-d52691b4dbfc